# clawlink-agent-mcp

./: .gitignore  .mcp.json  Dockerfile  README.md  README_zh.md  pyproject.toml  start_clawlink_agent.bat  start_clawlink_agent.sh  start_mcp_with_test.bat  start_mcp_with_test.ps1
clawlink_agent/: __init__.py  bootstrap.py  cli.py  conflict.py  generator.py  group_rules.py  mcp_stdio_bridge.py  mcp_tools.py  memory_store.py  models.py  replay.py  retriever.py  server.py  triadic.py
docs/: MCP_MEMORY_HOOK.md
scripts/: TEST_FRAMEWORK_README.md  app_scenario_ab_regression.py  app_scenario_regression.py  auto_capture_quality_test.py  memory_merge_decay_test.py  memory_pack_roundtrip_test.py  memory_qa_collector.py  memory_test_framework.py  memory_test_runner.py  memory_test_scenarios.py  router_agent_teaching_e2e_test.py  standalone_memory_automation_test.py  test_mcp_connection.py
